traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:10: error: ')' expected but '}' found.
    } else {
    ^